--- a/Parsing.cabal
+++ b/Parsing.cabal
@@ -26,7 +26,10 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      RegexParser
+      Types
+      AttoParser
+      MegaParser
   other-modules:
       Paths_Parsing
   hs-source-dirs:
@@ -41,27 +44,62 @@ library
     , text
   default-language: Haskell2010
 
-executable Parsing-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_Parsing
-  hs-source-dirs:
-      app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      Parsing
-    , base >=4.7 && <5
-  default-language: Haskell2010
-
-test-suite Parsing-test
+test-suite regex-tests
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_Parsing
+  main-is: RegexSpec.hs
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Parsing
+    , directory
+    , hspec
+    , regex-applicative
+    , text
     , base >=4.7 && <5
+  other-modules:
+      TestLoginFeatures
+      TestRegistrationFeatures
+      TestWithdrawalFeatures
+      Utils
+  default-language: Haskell2010
+
+test-suite atto-tests
+  type: exitcode-stdio-1.0
+  main-is: AttoSpec.hs
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      Parsing
+    , attoparsec
+    , directory
+    , hspec
+    , text
+    , base >=4.7 && <5
+  other-modules:
+      TestLoginFeatures
+      TestRegistrationFeatures
+      TestWithdrawalFeatures
+      Utils
+  default-language: Haskell2010
+
+test-suite mega-tests
+  type: exitcode-stdio-1.0
+  main-is: MegaSpec.hs
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      Parsing
+    , directory
+    , hspec
+    , megaparsec
+    , text
+    , base >=4.7 && <5
+  other-modules:
+      TestLoginFeatures
+      TestRegistrationFeatures
+      TestWithdrawalFeatures
+      Utils
   default-language: Haskell2010
